# onebox-rs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO-docs.md  cleanup.sh  config.docker.client.toml  config.docker.server.toml  config.test.client.bad_psk.toml  config.test.client.toml  config.test.server.toml  config.toml  docker-compose.yml  generate_file_list.py  setup_net_env.sh
changelog/: 0.1.0.md  CHANGELOG.md  README.md  TEMPLATE.md  UNRELEASED.md
docs/: PRD.md  README.md  SRS.md  TASKS.md  TEST_EXECUTION.md  TEST_PLAN.md  TODO-verify-visually.md  documentation.md  documentation_overview.md  file_list.js  viewer.html
docs/bpmn-io/: main-process.bpmn
docs/diagrams/: 04-link-failover-sequence.mmd
docs/diagrams/01-overview/: 01-system-architecture.mmd  02-lan-topology-example.mmd  03-wan-examples.mmd
docs/diagrams/02-protocol/: 01-packet-structure.mmd  02-jitter-buffer-logic.mmd
docs/diagrams/03-workflows/: 01-authentication.mmd  03-client-logic-flow.mmd  04-server-logic-flow.mmd  05-link-state-machine.mmd
docs/diagrams/04-testing/: 01-test-environment.mmd
docs/diagrams/05-configuration/: 01-config-schema.mmd
docs/diagrams/animejs/: README-animejs.md  index.html
docs/diagrams/blockdiag/: process-flow.diag
docs/diagrams/bpmn-io/: link-failover-scenario.bpmn  new-client-onboarding.bpmn
docs/diagrams/bpmn-io/sub-processes/: client-process.bpmn  server-process.bpmn
docs/diagrams/d2/: 01-architecture.d2  02-failover.d2  03-packet-structure.d2  04-jitter-buffer.d2  05-client-flow.d2  06-server-flow.d2  07-state-machine.d2  08-config-schema.d2
docs/diagrams/jointjs/: README-jointjs.md  index.html
docs/diagrams/mermaid-js/: README-mermaid-js.md  README-mermaidjs.md
docs/diagrams/mermaid-js/01-flowcharts/: 01-client-logic-flow.md  02-server-logic-flow.md
docs/diagrams/mermaid-js/02-sequence-diagrams/: 01-authentication-handshake.md  02-data-transfer-upstream.md  03-data-transfer-downstream.md  04-link-health-probe.md
docs/diagrams/motion/: README-motion.md  index.html
docs/diagrams/nomnoml/: process-flow.noml
docs/diagrams/plantuml/: 01-architecture.puml  02-packet-structure.puml  03-client-logic-flow.puml  03a-client-health-check-subflow.puml  04-server-logic-flow.puml  04a-server-packet-processing-subflow.puml  05-link-state-machine.puml  06-config-schema.puml  README.md
docs/diagrams/theatrejs/: README-theatrejs.md  index.html
docs/diagrams/threejs/: README-threejs.md  index.html
docs/diagrams/threejs/js/: 01-system-overview.js  (+2 more)
docs/diagrams/x6-antv/: README-x6.md  index.html
docs/graphviz/: process-flow.dot
docs/manim/: 01_link_failover.py  02_architecture.py  03_packet_structure.py  04_jitter_buffer.py  05_client_flow.py  06_server_flow.py  07_state_machine.py  08_config_schema.py
docs/slides/deckjs/: index.html
docs/slides/flowtimejs/: index.html
docs/slides/impressjs/: index.html
docs/slides/marp/: slides.md
docs/slides/mdx-deck/: deck.mdx  package.json
docs/slides/remark/: index.html
docs/slides/revealjs/: 02-problem.md  04-features-bonding.md  04-features-failover.md  06-tech-stack.md  07-future-work.md  08-end.md  index.html
docs/slides/slidev/: package.json  slides.md
docs/slides/spectacle/: package.json
docs/slides/webslides/: index.html
onebox-client/: Cargo.toml
onebox-client/src/: health.rs  main.rs
onebox-client/tests/: level_1_core_functionality.rs  level_2_and_5_reliability_tests.rs  level_3_performance_tests.rs  level_4_security_tests.rs
onebox-client/tests/common/: mod.rs
onebox-core/: Cargo.toml
onebox-core/src/: config.rs  crypto.rs  error.rs  lib.rs  packet.rs  types.rs
onebox-server/: Cargo.toml
onebox-server/src/: main.rs
(+58 files in other folders)
