[workspace]
members = [
    "onebox-core",
    "onebox-client", 
    "onebox-server"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nix = "0.27"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tun = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
