[workspace]
members = [
    "onebox-core",
    "onebox-client",
    "onebox-server"
, "docs/slides/spectacle/visual_verifier"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tun = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = "0.27"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3.3"
aead = "0.5.2"
blake3 = "1.5.0"
chacha20poly1305 = "0.10.1"
