[package]
name = "onebox-client"
version = "0.1.0"
edition = "2021"
description = "Client binary for onebox-rs internet bonding solution"
license = "MIT"

[[bin]]
name = "onebox-client"
path = "src/main.rs"

[dependencies]
onebox-core = { path = "../onebox-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio-tun = { workspace = true }
