[package]
name = "onebox-client"
version = "0.1.0"
edition = "2021"
description = "Client binary for onebox-rs internet bonding solution"
license = "MIT"

[[bin]]
name = "onebox-client"
path = "src/main.rs"

[dependencies]
onebox-core = { path = "../onebox-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio-tun = { workspace = true }
network-interface = "2.0.3"
nix = { workspace = true, features = ["socket"] }
bincode = { workspace = true }
aead = { workspace = true }
chacha20poly1305 = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
