[package]
name = "onebox-server"
version = "0.1.0"
edition = "2021"
description = "Server binary for onebox-rs internet bonding solution"
license = "MIT"

[[bin]]
name = "onebox-server"
path = "src/main.rs"

[dependencies]
onebox-core = { path = "../onebox-core" }
tokio = { workspace = true }
tokio-tun = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
